Bug 159028 - Table styles should all use automatic font color (not black) to be readable on dark Document Backgrounds
Summary: Table styles should all use automatic font color (not black) to be readable o...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0 all versions
Hardware: All All
: medium minor
Assignee: Justin L
URL:
Whiteboard: target:26.2.0
Keywords: accessibility, needsDevEval
Depends on:
Blocks: Writer-Table-Styles Options-Dialog-Colours Automatic-Color
  Show dependency treegraph
 
Reported: 2024-01-04 20:23 UTC by Faisal
Modified: 2025-10-16 16:05 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Faisal 2024-01-04 20:23:56 UTC
Description:
Default and Academic table style should use automatic font color, not black. Black makes it illegible in dark application color schemes. This can be an accessibility issue.

Steps to Reproduce:
1. Set dark color theme (Options > LibreOffice > Application Colors) to make "Document Background" dark gray
2. Create a table using "Default Table Style"
3. Enter some text in the table

Actual Results:
Text unreadable because the font color (set as black) is similar to the dark gray document color

Expected Results:
Text should by default be using "automatic" as font color


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: 60(Build:1)
CPU threads: 4; OS: Linux 6.1; UI render: default; VCL: kf5 (cairo+wayland)
Locale: en-GB (en_US.UTF-8); UI: en-US
7.6.4-2
Calc: threaded
Comment 1 Faisal 2024-01-04 20:35:18 UTC
Table styles "Financial" and "Elegant" also display this problem.
Comment 2 Dieter 2024-01-17 07:27:41 UTC
Can't confirm with

Version: 24.2.0.1 (X86_64) / LibreOffice Community
Build ID: b4d45829793cddfe67b58a53f495528c75738d8a
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded

If I choose LibreOffice Dark color settings are "automatic" by default. Background is black and font color is white.
Comment 3 Stéphane Guillou (stragu) 2024-01-19 23:33:18 UTC
Reproduced for both Default Table Style and Academic in:

Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: e19e193f88cd6c0525a17fb7a176ed8e6a3e2aa1
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Version: 24.2.0.2 (X86_64) / LibreOffice Community
Build ID: b1fd3a6f0759c6f806568e15c957f97194bbec8f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Also true for the top and bottom rows of Elegant, alternating inside rows of Box List variants, all but the top row of Financial... All font in the stock table styles should be automatic, really.

@Dieter, did you actually use the table style called "Default Table Style" in Table > Insert Table? (Using "None" does use a sensible default font colour.)
Comment 4 Justin L 2025-10-16 13:01:21 UTC
repro 26.2+

In OOo 3.3 the "default" style had shading on the top and bottom rows, and there was no academic style.

Marking as affecting 6.0 since this is when the default style changed to not having any background - at which point the font should have become automatic.
commit 0ba318b895c164750dc3c7bac6948b04b606f2b8
Author: Yousuf Philips on Mon Nov 6 18:14:55 2017 +0400
    tdf#107554 New default table style
    Reviewed-on: https://gerrit.libreoffice.org/44363

Proposed fix at https://gerrit.libreoffice.org/c/core/+/192510
Comment 5 Commit Notification 2025-10-16 16:04:08 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ef28443424f71e580406b9177255816f7f4a6e24

tdf#159028 sw: use COL_AUTO as font color for table styles

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.