tdf#159028 sw: use COL_AUTO as font color for table styles

Nice - in my testing an old LO shows COL_AUTO in the table,
and old documents still show their black fonts
after this change is made.

Change-Id: I4e2c7b551828cffe9410a5e558633263e8dfcf30
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192510
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>